--- a/wgpu-types/Cargo.toml
+++ b/wgpu-types/Cargo.toml
@@ -18,3 +18,4 @@ replay = ["serde"]
 [dependencies]
 bitflags = "1.0"
 serde = { version = "1.0", features = ["serde_derive"], optional = true }
+hal = { package = "gfx-hal", git="https://github.com/Uniformbuffer3/gfx", branch="fixes" }
